npx @angular/cli@latest add @angular/material --theme indigo-pink --animations true --typography true --project element-app

--- a/angular.json
+++ b/angular.json
@@ -39,6 +39,7 @@
               "projects/element-app/src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "projects/element-app/src/styles.scss"
             ],
             "scripts": []
@@ -102,6 +103,7 @@
               "projects/element-app/src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "projects/element-app/src/styles.scss"
             ],
             "scripts": []
