--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/elements": "^16.2.9",
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.8",
     "@angular/platform-browser": "^16.2.0",
