--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^16.2.0",
+    "rimraf": "^5.0.5",
     "typescript": "~5.1.3"
   }
 }
